--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -12,7 +12,7 @@
     </div>    
 
     <div class="col-2">
-        <a href="https://google.com" type="button" class="btn btn-outline-primary">Apply</a>
+        <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
     
 </div>
